--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
+    "@types/cannon": "^0.1.8",
+    "cannon-es": "^0.19.0",
     "cookie": "^0.4.1",
     "gsap": "^3.9.1",
     "lil-gui": "^0.16.1",
